# grassroots-backend/openAPI.json
@@ -1,7 +1,7 @@
 {
   "components": {
     "schemas": {
-      "ContactEntityOutDTO": {
+      "ContactDTO": {
         "properties": {
           "email": {
             "format": "email",
@@ -24,7 +24,11 @@
         "required": ["id", "email", "firstName", "lastName", "phoneNumber"],
         "type": "object"
       },
-      "ContactSearchInDTO": {
+      "ContactEntity": {
+        "properties": {},
+        "type": "object"
+      },
+      "ContactSearchRequestDTO": {
         "properties": {
           "email": {
             "type": "string"
@@ -49,7 +53,7 @@
         "properties": {
           "contacts": {
             "items": {
-              "$ref": "#/components/schemas/CreateContactInDto"
+              "$ref": "#/components/schemas/CreateContactRequestDto"
             },
             "type": "array"
           }
@@ -69,7 +73,7 @@
         "required": ["ids"],
         "type": "object"
       },
-      "CreateContactInDto": {
+      "CreateContactRequestDto": {
         "properties": {
           "email": {
             "format": "email",
@@ -88,12 +92,12 @@
         "required": ["email", "firstName", "lastName", "phoneNumber"],
         "type": "object"
       },
-      "GetContactByIDResponse": {
+      "GetContactByIDResponseDTO": {
         "properties": {
           "contact": {
             "allOf": [
               {
-                "$ref": "#/components/schemas/ContactEntityOutDTO"
+                "$ref": "#/components/schemas/ContactDTO"
               }
             ],
             "nullable": true
@@ -114,39 +118,39 @@
       "LoginStateDTO": {
         "properties": {
           "user": {
-            "$ref": "#/components/schemas/UserEntity"
+            "$ref": "#/components/schemas/UserDTO"
           }
         },
         "type": "object"
       },
-      "PaginatedContactOutDTO": {
+      "PaginatedContactResponseDTO": {
         "properties": {
           "contacts": {
             "items": {
-              "$ref": "#/components/schemas/ContactEntityOutDTO"
+              "$ref": "#/components/schemas/ContactDTO"
             },
             "type": "array"
           },
           "paginated": {
-            "$ref": "#/components/schemas/PaginatedOutDTO"
+            "$ref": "#/components/schemas/PaginatedResponseDTO"
           }
         },
         "required": ["contacts", "paginated"],
         "type": "object"
       },
-      "PaginatedContactSearchInDTO": {
+      "PaginatedContactSearchRequestDTO": {
         "properties": {
           "contact": {
-            "$ref": "#/components/schemas/ContactSearchInDTO"
+            "$ref": "#/components/schemas/ContactSearchRequestDTO"
           },
           "paginated": {
-            "$ref": "#/components/schemas/PaginatedInDTO"
+            "$ref": "#/components/schemas/PaginatedRequestDTO"
           }
         },
         "required": ["contact", "paginated"],
         "type": "object"
       },
-      "PaginatedInDTO": {
+      "PaginatedRequestDTO": {
         "properties": {
           "rowsToSkip": {
             "minimum": 0,
@@ -160,7 +164,7 @@
         "required": ["rowsToSkip", "rowsToTake"],
         "type": "object"
       },
-      "PaginatedOutDTO": {
+      "PaginatedResponseDTO": {
         "properties": {
           "rowsSkipped": {
             "minimum": 0,
@@ -174,7 +178,7 @@
         "required": ["rowsSkipped", "rowsTotal"],
         "type": "object"
       },
-      "UserEntity": {
+      "UserDTO": {
         "properties": {
           "displayName": {
             "type": "string"
@@ -410,7 +414,7 @@
               "application/json": {
                 "schema": {
                   "items": {
-                    "$ref": "#/components/schemas/ContactEntityOutDTO"
+                    "$ref": "#/components/schemas/ContactDTO"
                   },
                   "type": "array"
                 }
@@ -438,7 +442,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateContactInDto"
+                "$ref": "#/components/schemas/CreateContactRequestDto"
               }
             }
           },
@@ -449,7 +453,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ContactEntityOutDTO"
+                  "$ref": "#/components/schemas/ContactEntity"
                 }
               }
             },
@@ -516,7 +520,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/PaginatedContactSearchInDTO"
+                "$ref": "#/components/schemas/PaginatedContactSearchRequestDTO"
               }
             }
           },
@@ -527,7 +531,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PaginatedContactOutDTO"
+                  "$ref": "#/components/schemas/PaginatedContactResponseDTO"
                 }
               }
             },
@@ -565,7 +569,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetContactByIDResponse"
+                  "$ref": "#/components/schemas/GetContactByIDResponseDTO"
                 }
               }
             },
