# grassroots-backend/src/contacts/Contacts.controller.ts
@@ -1,14 +1,15 @@
 import { Controller, Get, Post, Body, Param } from "@nestjs/common";
 import { ContactsService } from "./Contacts.service";
+import { ContactEntity } from "./entities/Contact.entity";
 import {
-  ContactEntityOutDTO,
-  GetContactByIDResponse,
-  CreateContactInDto,
-  PaginatedContactOutDTO,
-  PaginatedContactSearchInDTO,
+  ContactDTO,
   CreateBulkContactRequestDto,
   CreateBulkContactResponseDTO,
-} from "../grassroots-shared/Contact.entity.dto";
+  CreateContactRequestDto,
+  GetContactByIDResponseDTO,
+  PaginatedContactResponseDTO,
+  PaginatedContactSearchRequestDTO,
+} from "../grassroots-shared/Contact.dto";
 
 @Controller("contacts")
 export class ContactsController {
@@ -16,8 +17,8 @@ export class ContactsController {
 
   @Post()
   create(
-    @Body() createContactDto: CreateContactInDto,
-  ): Promise<ContactEntityOutDTO> {
+    @Body() createContactDto: CreateContactRequestDto,
+  ): Promise<ContactEntity> {
     return this.contactsService.create(createContactDto);
   }
 
@@ -29,19 +30,19 @@ export class ContactsController {
   }
 
   @Get()
-  findAll(): Promise<ContactEntityOutDTO[]> {
+  findAll(): Promise<ContactDTO[]> {
     return this.contactsService.findAll();
   }
 
   @Post("search")
   search(
-    @Body() contact: PaginatedContactSearchInDTO,
-  ): Promise<PaginatedContactOutDTO> {
+    @Body() contact: PaginatedContactSearchRequestDTO,
+  ): Promise<PaginatedContactResponseDTO> {
     return this.contactsService.search(contact);
   }
 
   @Get(":id")
-  async findOne(@Param("id") id: number): Promise<GetContactByIDResponse> {
+  async findOne(@Param("id") id: number): Promise<GetContactByIDResponseDTO> {
     return {
       contact: await this.contactsService.findOne(id),
     };
