# grassroots-backend/src/grassroots-shared/User.dto.ts
@@ -1,25 +1,22 @@
-import { Entity, PrimaryKey, Property } from "@mikro-orm/core";
 import { IsEmail, IsOptional, IsString } from "class-validator";
 
-@Entity()
-export class UserEntity {
+export class UserDTO {
   @IsString()
-  @PrimaryKey()
   id!: string;
+
   @IsEmail({}, { each: true })
   @IsOptional()
-  @Property({ type: "json", nullable: true })
   emails?: string[];
+
   @IsString()
   @IsOptional()
-  @Property({ nullable: true })
   firstName?: string;
+
   @IsString()
   @IsOptional()
-  @Property({ nullable: true })
   lastName?: string;
+
   @IsString()
   @IsOptional()
-  @Property({ nullable: true })
   displayName?: string;
 }
